src/pages/clippingsMgr.css
/* ... */
#item-properties > #placeholder-toolbar > label {
    order: 1;
    flex: 0 1 auto;

    margin-right: 0;
}

#item-properties > #placeholder-toolbar > #plchldr-presets {
    order: 2;
    flex: 0 1 auto;
    
    padding-right: 18px;
    background-image: var(--url-toolbar-btn-img-dropdown);
    background-position-x: right;
}

#item-properties > #placeholder-toolbar > #custom-plchldr {
    order: 3;
    flex: 0 1 auto;
}

#item-properties > #placeholder-toolbar > #auto-incr-plchldr {
    order: 4;
    flex: 0 1 auto;
}

#placeholder-toolbar label {
    font-size: 11px;
}

#item-properties > #options-bar {
    order: 5;
    flex: 0 1 auto;
    margin-bottom: 6px;
    padding: 1px 8px 0px 8px;
    background-color: var(--color-details-pane-bkgd);
}

#options-bar > #shortcut-key-select {
    order: 1;
    flex: 0 1 auto;
    margin-top: 3px;
}

#options-bar > #shortcut-key-select > #clipping-key {
    margin-bottom: 0;
    font-size: 12px;
}

#options-bar > #shortcut-key-select > #show-shortcut-list {
    width: 28px;
    height: 24px;
    vertical-align: 5px;
    background-image: var(--url-toolbar-btn-img-shct-keys);
    background-position: center;
    background-repeat: no-repeat;
    background-color: transparent;

    border: 1px solid var(--color-toolbarbtn-hover-bkgd);
    border-radius: 3px;
}

#options-bar > #shortcut-key-select > #show-shortcut-list:hover {
    background-image: var(--url-toolbar-btn-img-shct-keys-hover);
    background-color: var(--color-toolbarbtn-hover-bkgd);
}

#options-bar > #shortcut-key-select > #show-shortcut-list:active {
    background-image: var(--url-toolbar-btn-img-shct-keys-active);
    background-color: var(--color-toolbarbtn-active-bkgd);
    border-color: #858585;
}

#options-bar > #options-bar-spacer {
    order: 2;
    flex: 1 1 auto;
}

#options-bar > #clipping-label {
    order: 3;
    flex: 0 1 auto;
    margin-top: 4px;
}

#options-bar > #clipping-label > #clipping-label-picker {
    font-size: 12px;
}

#status-bar {
    width: 100%;
    height: var(--statusbar-height);
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 8px;
    
    border-top: 1px solid var(--color-tb-border);
    background-color: var(--color-statusbar-bkgd);

    font: small-caption;
}

#status-bar-msg {
    width: 100%;
    text-align: left;
}


/*
 * Dialog boxes
 */

.lightbox .msgbox-icon,
.lightbox .msgbox-info-icon {
    float: left;
    margin-top: 0;
    margin-right: 12px;
}

.lightbox .msgbox-icon {
    width: 34px;
    height: 34px;   
}

.lightbox .msgbox-info-icon {
    width: 32px;
    height: 32px;
}

body[data-os="win"] .lightbox .msgbox-icon {
    background-image: url("../img/alert-win.png");
}

.lightbox .msgbox-icon {
    background-image: url("../img/warning-64.png");
    background-size: contain;
}

.lightbox .msgbox-info-icon {
    background-image: url("../img/info.svg");
    background-size: contain;
}

body[data-os="win"] .lightbox .msgbox-info-icon {
    background-image: url("../img/info-win.png");
    background-size: contain;
}

.lightbox .msgbox-icon[os="mac"] {
    background-image: url("../img/warning-64-mac.png");
}

.lightbox input[type="text"] {
    font-size: 12px;
}

.lightbox .browser-style input[type="checkbox"] + label::before {
    width: 14px;
    height: 14px;
}

.lightbox fieldset {
    border-left: none;
    border-right: none;
    border-top: 1px solid var(--color-dlg-fieldset-border);
    border-bottom: 1px solid var(--color-dlg-fieldset-border);
}

.lightbox fieldset > legend {
    padding-left: 0px;
    padding-right: 8px;
    margin-left: -10px;
}

.lightbox select {
    font: caption;
    font-size: 12px;
}

.lightbox select > option {
    padding-top: 3px;
    padding-bottom: 3px;
}

.lightbox .row {
    width: 100%;
}

.lightbox .row > input[type="text"] {
    width: 100%;
    margin-top: 2px;
    margin-bottom: 8px;
}

#shortcut-key-conflict-msgbox,
#clipping-missing-src-url-msgbox,
#remove-all-source-urls-dlg,
#import-confirm-msgbox,
#export-confirm-msgbox,
#backup-confirm-msgbox,
#move-sync-fldr-msgbox,
#delete-sync-fldr-msgbox,
#show-only-synced-items-reminder,
#sync-fldr-full-error-msgbox,
#generic-msg-box {
    top: 64px;
}

#request-ext-perm-dlg {
    --width: 372px;
    --height: 220px;
    top: 48px;
}

#request-ext-perm-dlg > .msgbox-icon {
    margin-top: 4px;
}

#request-ext-perm-dlg p:first-of-type {
    margin-top: 4px;
}

#request-ext-perm-dlg ul {
    padding-left: 24px;
}

#request-ext-perm-dlg .dlg-content {
    margin-left: 48px;
}

#custom-placeholder-dlg {
    --width: 336px;
    --height: 204px;
    top: 48px;
}

#numeric-placeholder-dlg {
    --width: 336px;
    --height: 188px;
    top: 48px;
}

#custom-placeholder-dlg input[type="text"],
#numeric-placeholder-dlg input[type="text"] {
    display: block;
}

#custom-placeholder-dlg .input-error,
#numeric-placeholder-dlg .input-error {
    background-color: pink;
}

#insert-date-time-placeholder-dlg {
    --width: 306px;
    --height: 340px;
    top: 14px;
}

#clipping-missing-src-url-msgbox {
    --width: 430px;
}

#shortcut-key-conflict-msgbox .msgbox-icon {
    margin-top: 8px;
}

#shortcut-list-dlg {
    --width: 424px;
    --height: 324px;
    top: 18px;
}

body[data-os="mac"] #shortcut-list-dlg {
    --height: 320px;
}

body[data-locale="nl"] #shortcut-list-dlg #shortcut-instrxns {
    letter-spacing: -0.38px;
}

body[data-locale="fr"] #shortcut-list-dlg #shortcut-instrxns {
    letter-spacing: -0.16px;
}

body[data-locale="de"] #shortcut-list-dlg #shortcut-instrxns {
    letter-spacing: -0.32px;
}


#shortcut-list-dlg > .dlg-btns {
    width: 100%;
}

#shortcut-list-dlg > .dlg-btns > #export-shct-list {
    order: 1;
    flex: 0 1 auto;
    margin-left: 22px;
}

#shortcut-list-dlg > .dlg-btns > #shortcut-list-btns-spacer {
    order: 2;
    flex: 1 1 auto;
}

#shortcut-list-dlg > .dlg-btns > .dlg-accept {
    order: 3;
    flex: 0 1 auto;
}
/* ... */

